--- a/WebAppCRUDonASPMVCNET/Web.config
+++ b/WebAppCRUDonASPMVCNET/Web.config
@@ -9,9 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="WebAppCRUDonASPMVCNETContext" connectionString="Data Source=DESKTOP-FDRVKT9\SQLEXPRESS; Initial Catalog=EmployeeDB; Integrated Security=True; " providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <!--<connectionStrings>
     <add name="WebAppCRUDonASPMVCNETContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=WebAppCRUDonASPMVCNETContext-20200122181730; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|WebAppCRUDonASPMVCNETContext-20200122181730.mdf"
       providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
